# stellar-mk-audit

./: .gitignore  CLAUDE.md  CLAUDE_CODE_EXECUTION.md  LICENSE  README.md  decisions.md  project_plan.md  pyproject.toml  requirements.txt
artifacts/: acceptance_log.json
scripts/: ablation.py  build_features.py  build_labels.py  check_citations.sh  make_figure.py  run_benchmark.py  run_interpret.py  train_classifier.py
src/fetch/: __init__.py  common.py  fetch_ges.py
src/interpret/: __init__.py  benchmark.py  classifier.py  features.py  importance.py  labels.py  line_match.py  lines.py  occlusion.py  plotting.py  shap_explain.py
src/preprocess/: __init__.py  build_hdf5.py  build_native.py  continuum.py  data_splits.py  readers.py  wavelength_grid.py
src/utils/: __init__.py
tests/: conftest.py  test_benchmark.py  test_features.py  test_labels.py  test_line_coverage.py  test_lines.py  test_xmatch.py
